Removed neo4j to compile again, but not started any work on test outcomes